fixed homepage text alignment and strutcture

--- a/src/styles.css
+++ b/src/styles.css
@@ -127,26 +127,15 @@ table {
     border-spacing: 0;
 }
 
+body {
+    font-family: "Raleway", sans-serif;
+    letter-spacing: 1px;
+    background-color: #44313b;
+    margin-right: 12vw;
+    margin-left: 12vw;
 
-
-
-
-
-
-
-
-body{
-
-   font-family: "Raleway", sans-serif;
-   letter-spacing: 1px;
-   background-color: #44313b;
-   margin-right: 12vw;
-   margin-left: 12vw;
-
-
-   header{
-
-        nav{
+    header {
+        nav {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             margin-bottom: 16px;
@@ -166,14 +155,19 @@ body{
 
         #infoDiv {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-around;
+            justify-content: center;
 
-            #homepageImg {
+            p {
+                text-align: center;
+            }
+
+            img {
                 width: 25vw;
             }
         }
-        
+
         /*MENU*/
         #menu {
             display: flex;
